[package]
name = "bundle-lint"
version = "0.1.7"
license = "Apache2"
authors = ["Chris MacNaughton <chris@centaurisolutions.nl>"]
edition = "2018"

[dependencies]
structopt = "0.2.18"
log = "0.4.7"
simple_logger = "1.3.0"

serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
failure = "0.1.5"
xdg = "2.2.0"
git2 = { version = "0.9.1", features = ["https"]}
